<resources>
    <string name="app_name">CARMA</string>
    <string name="add_gesture_button_text">Add new gesture</string>
    <string name="recognize_gesture_button_text">Recognize Gesture</string>
    <string name="gesture_name_input_hint">name of gesture</string>
    <string name="gesture_name_title">Gesture Name</string>
    <string name="start_sampling_button">Start sampling</string>
    <string name="end_sampling_button">End sampling</string>
    <string name="add_gesture_activity_title">Add New Gesture</string>
    <string name="setup_error_message">Could not load the necessary information from openHAB.</string>
    <string name="setup_retry">Try again</string>
    <string name="select_gesture_title">Select Gesture</string>
    <string name="done_binding_button_text">Done</string>
    <string name="action_binding_title">Actions</string>
    <string name="room_binding_title">Rooms</string>
</resources>
