<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_gesture_activity_title"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_gesture_button"
        android:id="@+id/train_gesture_button"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gesture_name_input"
        android:selectAllOnFocus="true"
        android:hint="@string/gesture_name_input_hint"
        android:layout_below="@+id/gesture_name_textView"
        android:layout_centerHorizontal="true"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gesture_name_title"
        android:id="@+id/gesture_name_textView"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gesture_training_count_textView"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title"/>
</RelativeLayout>